@@ -10,7 +10,7 @@ import org.sunflow.core.Display;
 import org.sunflow.core.Tesselatable;
 import org.sunflow.core.camera.PinholeLens;
 import org.sunflow.core.display.FileDisplay;
-import org.sunflow.core.light.MeshLight;
+import org.sunflow.core.light.TriangleMeshLight;
 import org.sunflow.core.primitive.Sphere;
 import org.sunflow.core.primitive.TriangleMesh;
 import org.sunflow.core.shader.DiffuseShader;
@@ -164,7 +164,7 @@ public class Benchmark implements BenchmarkTest, UserInterface, Display {
             parameter("triangles", new int[] { 0, 1, 2, 2, 3, 0 });
             parameter("radiance", emit);
             parameter("samples", 8);
-            MeshLight light = new MeshLight();
+            TriangleMeshLight light = new TriangleMeshLight();
             light.init("light", this);
 
             // spheres
